<resources>
    <string name="app_name">iMinPrinter</string>
    <string name="main_tab">Main Page</string>
    <string name="function_test">Function test</string>
    <string name="setting">Settings</string>
    <string name="function_all">Sample testing</string>
    <string name="function_qrcode">QR code</string>
    <string name="function_barcode">Barcode</string>
    <string name="function_text_pic">Text to image</string>
    <string name="function_tab">Table printing</string>
    <string name="table_col_num">Line %s</string>
    <string name="table_limit_tip">* Support up to 4</string>
    <string name="table_limit_col">Insert table column</string>
    <string name="add_tab_line">Add a new row</string>
    <string name="function_pic">Image</string>
    <string name="function_line">Blank printing test</string>
    <string name="function_buffer">Transaction printing</string>
    <string name="trans_print_success">Transaction printing successful</string>
    <string name="trans_print_fail">Transaction printing failed</string>
    <string name="get_it">OK</string>
    <string name="function_API">API printing</string>
    <string name="function_set">Global configuration</string>
    <string name="function_black_line">Black mark printing</string>
    <string name="function_label">Label printing</string>
    <string name="function_cash">Cashbox</string>
    <string name="function_lcd">Customer display test</string>
    <string name="function_multi">Multithreading test</string>
    <string name="function_multi_app">Multiprocess testing</string>
    <string name="function_bug">Customer reported bug</string>
    <string name="function_log">SDKLog settings</string>
    <string name="function_cmd">Command printing</string>
    <string name="function_example_ticket">Single receipt printing test</string>
    <string name="function_net_print">Network printing</string>
    <string name="function_blue_print">Bluetooth printing</string>
    <string name="qr_title1">QR code content:</string>
    <string name="qr_title2">QR code size:</string>
    <string name="qr_title2_">Configure QR code size</string>
    <string name="qr_title3">QR code error correction level:</string>
    <string name="qr_title4">QR code align method:</string>
    <string name="double_qr_print">Double QR code printing</string>
    <string name="print">Print</string>
    <string name="input_print">Input print</string>
    <string name="print_file">Print file</string>
    <string name="great_qr_pic">Generate QR code image</string>
    <string name="bar_title1">Barcode content:</string>
    <string name="bar_title2">Barcode encoding:</string>
    <string name="bar_title3">Barcode content text position:</string>
    <string name="bar_title4">Barcode height:</string>
    <string name="bar_title5">Barcode width:</string>
    <string name="great_bar_pic">Generate barcode image</string>
    <string name="text_title1">Please insert text to print:</string>
    <string name="text_title2"> Font character library:</string>
    <string name="text_size">Font size:</string>
    <string name="text_title4">Font double-height:</string>
    <string name="text_title5">Font double-width:</string>
    <string name="line_space">Line spacing:</string>
    <string name="text_title7">Alignment:</string>
    <string name="cut_mode">Cutter mode:</string>
    <string name="text_title9">Text rotation:</string>
    <string name="text_title12">Text direction:</string>
    <string name="text_checkbox1">Italic</string>
    <string name="text_checkbox2">Bold</string>
    <string name="text_checkbox3">Underline:</string>
    <string name="text_white">Anti-white</string>
    <string name="white_print">Anti-white printing</string>
    <string name="select_font">Select font:</string>
    <string name="set_table_column">Insert table column(1~4):</string>
    <string name="add_table">Add a row</string>
    <string name="item_table_content">Table content:</string>
    <string name="item_table_weight">Weight:</string>
    <string name="table_lable">Table%s</string>
    <string name="set_feed_column">Configure blank print units(0~250)</string>
    <string name="front_print">Forward printing</string>
    <string name="back_print">Reverse printing</string>
    <string name="pic_print_amount">Image printing frequency:</string>
    <string name="pic_print_time">Image printing interval(s):</string>
    <string name="pic_checkbox1">Cut paper after printing</string>
    <string name="pic_select">Select local image</string>
    <string name="start_trans">Start transaction printing</string>
    <string name="trans_example1">Print receipt 1</string>
    <string name="trans_example2">Print receipt 2</string>
    <string name="trans_example3">Print receipt 3</string>
    <string name="trans_commit">Submit transaction</string>
    <string name="cmd_title1">Insert command/text（Input command only in hexadecimal）:</string>
    <string name="cmd_select_file">Select cmd .txt file</string>
    <string name="select_file">Select file</string>
    <string name="file_name">File name:</string>
    <string name="set_text1">Printing density configuration:</string>
    <string name="set_text2">Printing speed configuration:</string>
    <string name="set_text3">Character encoding configuration:</string>
    <string name="set_text4">Paper format configuration:</string>
    <string name="lcd_show_text">Display text in single line</string>
    <string name="lcd_show_tow_text">Display text in two lines</string>
    <string name="lcd_show_pic">Display image</string>
    <string name="print_onec_label">Print a single label</string>
    <string name="print_more_label">Print multiple labels</string>
    <string name="print_baidu">Baidu receipt</string>
    <string name="print_elme">Ele.me receipt</string>
    <string name="print_jd">jd receipt</string>
    <string name="print_sf">sf receipt</string>
    <string name="print_jdhk">Intermittent black blocks</string>
    <string name="print_hk">Full black block</string>
    <string name="test_page">Test page</string>
    <string name="print_select_ticket">Select receipt content</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="printer_test">Print test</string>
    <string name="cut_print_test">Paper cutting test</string>
    <string name="printer_message">Built-in printer information:</string>
    <string name="blue_test">Bluetooth printing test</string>
    <string name="net_test">Network printing test</string>
    <string name="printer_serial_number_">Printer serial number:%s </string>
    <string name="printer_model_name_">Printer model:%s</string>
    <string name="printer_thermal_head_">Printer head model:%s</string>
    <string name="printer_firmware_version_">Firmware version:%s</string>
    <string name="printer_service_version_">Print service version:%s</string>
    <string name="printer_serial_number">Printer serial number</string>
    <string name="printer_model_name">Printer model</string>
    <string name="printer_thermal_head">Printer head model</string>
    <string name="printer_firmware_version">Firmware version</string>
    <string name="printer_service_version">Print service version</string>
    <string name="printer_thermal_head_type">Printer head dimension</string>
    <string name="printer_distance">Printing spacing</string>
    <string name="input_text">Configure content</string>
    <string name="bar_title6">One-dimensional code alignment method:</string>
    <string name="text_title10">Country code:</string>
    <string name="text_title13">Configure Chinese character print mode:</string>
    <string name="text_title14">COnfigure character spacing:</string>
    <string name="text_title15">Configure Chinese character spacing (Left):</string>
    <string name="text_title16">Configure Chinese character spacing (Right):</string>
    <string name="text_check4">Double-height（Valid/Invalid）</string>
    <string name="text_check5">Double-width（Valid/Invalid）</string>
    <string name="text_check6">Underline(Valid/Invalid)</string>
    <string name="text_check7">Font style（24*24/16*16）</string>
    <string name="text_check7_asc11">Font style（12*24/9*17）</string>
    <string name="text_pic_delete_line">Strikethrough</string>
    <string name="text_space">Text character spacing:</string>
    <string name="text_carrier_font">Carrier font：</string>
    <string name="print1">Print1</string>
    <string name="pic_example">Sample image:</string>
    <string name="print_example_pic">Print sample image</string>
    <string name="customize_pic">Customised pritn image</string>
    <string name="print_and_line">Feed paper by one row</string>
    <string name="set_text5">Set global alignment</string>
    <string name="double_qrcode">Double QR-code test</string>
    <string name="qr_title0">QR1:</string>
    <string name="qr_title00">QR2:</string>
    <string name="dqr_title4">QR1 version</string>
    <string name="dqr_title44">QR2 version</string>
    <string name="dqr_title2">QR1 left margin</string>
    <string name="dqr_title22">QR2 left margin</string>
    <string name="dqr_title"> Double QR size</string>
    <string name="dqr_title3">QR1 error:</string>
    <string name="dqr_title33">QR2 error:</string>
    <string name="start_trans_clear">Begin transaction printing and clear data</string>
    <string name="clear_data">Clear data?</string>
    <string name="trans_commit_cache">Submit transaction and print</string>
    <string name="exit_commit">Exit transaction printing（true clear cache，false do not print）</string>
    <string name="print_mt">Meituan receipt</string>
    <string name="print_kb">Koubei receipt</string>
    <string name="cmd_check1">Hexadecimal</string>
    <string name="cmd_check2">Cut paper</string>
    <string name="clear">Clear content</string>
    <string name="set_text6">Configure printer mode</string>
    <string name="print_all">Combine receipt printing</string>
    <string name="set_text7">Configure test mode</string>
    <string name="blue_printer">Bluetooth printer</string>
    <string name="prints_number">Numbers of print</string>
    <string name="intervals">Interval time (ms)</string>
    <string name="aging_test">Aging test</string>
    <string name="number_of_print">Print %s </string>
    <string name="update">Start upgrading</string>
    <string name="printer_file_path">Obtain local bin file address</string>
    <string name="print_status">Printer status:%s</string>
    <string name="print_color_chart">Pixel processing printing</string>
    <string name="set_text8">Update printer information</string>
    <string name="set_text9">Release SDKUSB and reconnect</string>
    <string name="text_content8">Do not cut</string>
    <string name="knife_reset">Restore the cutter position</string>
    <string name="clear_old_data">Clear previous transaction queue cache when begin transaction printing?</string>
    <string name="print_trans_data">Print data when submitting transaction?</string>
    <string name="print_trans_cache_data">Print transaction queue cache data when exit transaction printing?</string>
    <string name="switch_connect_printer">Switch between built-in and external printer</string>
    <string name="toast_table_num_tip">Configure table column 1~4</string>
    <string name="toast_cmd_input_tip">"No empty blank fill allowed, please re-enter"</string>
    <string name="edit_pls_input_hint">Please enter whole number (s)</string>
    <string name="paper_feed">Feed paper</string>
    <string name="api_data_adapter">Application API interface and data adapter layer</string>
    <string name="print_test">Print test</string>
    <string name="status_wifi">"State：%s %s "</string>
    <string name="status_ip">IP：%s</string>
    <string name="configuration">Configuration</string>
    <string name="print_ticket1">Print receipt</string>
</resources>