<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".BufferActivity">
    <com.imin.newprinterdemo.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/function_buffer"
        app:back="true"
        app:leftVisible="true"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/clearOldData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_old_data"
                android:textColor="@color/color_3333333"
                android:textSize="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/commintTrans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print_trans_data"
                android:textColor="@color/color_3333333"
                android:textSize="16dp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clearOldData" />

            <CheckBox
                android:id="@+id/exitCacheTrans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/print_trans_cache_data"
                android:textColor="@color/color_3333333"
                android:textSize="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/commintTrans" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textColor="@color/text"
                android:gravity="left"
                android:text="@string/start_trans"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exitCacheTrans" />

            <TextView
                android:id="@+id/tv_start"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/start_trans"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvResult"
                android:background="@drawable/dra_corner_8"/>

            <TextView
                android:id="@+id/tv_start_clear"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/start_trans_clear"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/dra_corner_8"/>

            <TextView
                android:id="@+id/tv_example1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/trans_example1"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_start"
                android:background="@drawable/dra_corner_8"/>
            <TextView
                android:id="@+id/tv_example2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/trans_example2"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_example1"
                android:background="@drawable/dra_corner_8"/>
            <TextView
                android:id="@+id/tv_example3"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/trans_example3"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_example2"
                android:background="@drawable/dra_corner_8"/>

            <TextView
                android:id="@+id/tv_commit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/trans_commit_cache"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_example3"
                android:background="@drawable/dra_corner_8"/>

            <TextView
                android:id="@+id/tv_end"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/exit_commit"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_commit"
                android:background="@drawable/dra_corner_8"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>