<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">
    <com.imin.newprinterdemo.TitleLayout
        android:id="@+id/titleLy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/printer_test"
        app:back="false"
        app:rightVisible="false"
        app:leftVisible="false"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/color_666666"
                android:text="@string/printer_message"/>
            <TextView
                android:id="@+id/textTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitle1"
                android:textColor="@color/color_666666"
                android:text="@string/printer_service_version"/>
            <TextView
                android:id="@+id/textSerialNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTitle2"
                android:textColor="@color/color_3333333"
                android:text="@string/printer_serial_number"/>
            <TextView
                android:id="@+id/textModelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSerialNumber"
                android:textColor="@color/color_3333333"
                android:text="@string/printer_model_name"/>

            <TextView
                android:id="@+id/textThermalHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textModelName"
                android:textColor="@color/color_3333333"
                android:text="@string/printer_thermal_head"/>
            <TextView
                android:id="@+id/textFirmwareVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textThermalHead"
                android:textColor="@color/color_3333333"
                android:text="@string/printer_firmware_version"/>

            <TextView
                android:id="@+id/printTest"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_marginTop="50dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/printer_test"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFirmwareVersion"
                android:background="@drawable/dra_corner_8"/>

            <TextView
                android:id="@+id/blueTest"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/blue_test"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/printTest"
                android:background="@drawable/dra_corner_8"/>


            <TextView
                android:id="@+id/netTest"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/net_test"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/blueTest"
                android:background="@drawable/dra_corner_8"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>