<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".AllActivity">
    <com.imin.newprinterdemo.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/function_all"
        app:back="true"
        app:leftVisible="true"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:fillViewport="true">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvPrintTicket0"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/print_all"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dra_corner_8"/>
            <TextView
                android:id="@+id/tvPrintTicket2"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/print_elme"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dra_corner_8"/>
            <TextView
                android:id="@+id/tvPrintTicket1"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/print_baidu"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dra_corner_8"/>

            <TextView
                android:id="@+id/tvPrintTicket3"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/print_kb"
                android:visibility="gone"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dra_corner_8"/>
            <TextView
                android:id="@+id/tvPrintTicket4"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/print_mt"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dra_corner_8"/>
            <TextView
                android:id="@+id/tvPrintTicket5"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/print_jdhk"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dra_corner_8"/>
            <TextView
                android:id="@+id/tvPrintTicket6"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/print_hk"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dra_corner_8"/>
            <TextView
                android:id="@+id/tvPrintTicket7"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/print_self"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dra_corner_8"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>